header/tab info

--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -12,16 +12,19 @@
               <a class="nav-link" href="/"><%-__('Trade')%></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" target="_blank" href="https://mc-ex.multicoins.org"><%-__('Exchange')%></a>
+              <a class="nav-link" target="_blank" href="https://sumexplorer.com"><%-__('Explorer')%></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" target="_blank" href="https://mc-dice.multicoins.org"><%-__('DICE')%></a>
+              <a class="nav-link" target="_blank" href="https://slicewallet.org"><%-__('Mobile')%></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" target="_blank" href="http://mc-faucet.multicoins.org"><%-__('Faucet')%></a>
+              <a class="nav-link" target="_blank" href="https://sumfaucet.co"><%-__('Faucet')%></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" target="_blank" href="https://forum.marycoin.org/"><%-__('Forum')%></a>
+              <a class="nav-link" target="_blank" href="http://sumcoin.org/about/"><%-__('About')%></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" target="_blank" href="https://sumnode.io"><%-__('Run A Node')%></a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="/API">API</a>
@@ -46,8 +49,8 @@
             </li>
         </ul>
         
-        <button type="button" id='id-button-lang-en' class="btn btn-outline-success btn-sm m-1">EN</button>
-        <button type="button" id='id-button-lang-ru' class="btn btn-outline-success btn-sm">RU</button>
+      <!--  <button type="button" id='id-button-lang-en' class="btn btn-outline-success btn-sm m-1">EN</button>
+        <button type="button" id='id-button-lang-ru' class="btn btn-outline-success btn-sm">RU</button> -->
     </div>
 </nav>
     <div id="loader" style="display:none;"></div>
