--- a/server/views/pages/registration/login.ejs
+++ b/server/views/pages/registration/login.ejs
@@ -7,7 +7,9 @@
     <%- include ('../../partials/header') %>
 
     <%- include ('../../partials/alerts') %>
-
+    
+    <center>
+    
     <div class="container">
         <div class="row">
             <div class="offset2 col-md-6">
@@ -36,7 +38,7 @@
                     </div>
                     <a class="login-form-a" href="/password_reset"><%-__('Forgot your password?')%></a><br>
                     <div class="login-link">
-                        <%-__('New to OpenTrade?')%>&nbsp;<a href="/signup"><%-__('Sign up now!')%></a>
+                        <%-__('New to SumExchange?')%>&nbsp;<a href="/signup"><%-__('Sign up now!')%></a>
                     </div>
                 </div> 
               </form>
@@ -44,7 +46,8 @@
         </div>
 
     </div> <!-- /container -->
-
+    
+    </center>
 
     <%- include ('../../partials/footer') %>
     <script src='/js/login.js'></script>
