--- a/server/views/pages/registration/pin.ejs
+++ b/server/views/pages/registration/pin.ejs
@@ -8,7 +8,8 @@
 
     <%- include ('../../partials/alerts') %>
 
-
+    <center>
+    
     <div class="container">
       <div id='first-step' class="row">
         <div class="offset2 col-md-4">
@@ -28,7 +29,8 @@
       </div>
     </div> <!-- /container -->
 
-
+    </center>
+    
     <%- include ('../../partials/footer') %>
     <script src='/js/pin.js'></script>
   </body>
