--- a/server/views/pages/registration/signup_confirm.ejs
+++ b/server/views/pages/registration/signup_confirm.ejs
@@ -8,11 +8,13 @@
 
     <%- include ('../../partials/alerts') %>
 
+    <center>
+    
     <div class="container">
       <div class="row" <% var success = ''; if (error) success = 'style="display:none;"'%> <%- success %>>
         <div class="offset2 col-md-6">
             <h2>Registration confirmed!</h2>
-            <p>You can <a href='/login'>login</a> to OpenTrade now.
+            <p>You can <a href='/login'>login</a> to SumExchange now.
         </div>
       </div>
       <div class="row" <% var fail = ''; var errMessage = message || "(unknown)"; if (!error) fail = 'style="display:none;"'%> <%- fail %>>
@@ -22,7 +24,9 @@
         </div>
       </div>
     </div> <!-- /container -->
-
+    
+    </center>
+    
     <%- include ('../../partials/footer') %>
   </body>
 </html>
