--- a/server/views/pages/registration/new_password.ejs
+++ b/server/views/pages/registration/new_password.ejs
@@ -8,7 +8,8 @@
 
     <%- include ('../../partials/alerts') %>
 
-
+    <center>
+    
     <div id='new_password' class="container">
       <div id='first-step' class="row">
         <div class="offset2 col-md-6">
@@ -48,6 +49,7 @@
       </div>
     </div> <!-- /container -->
 
+    </center>
 
     <%- include ('../../partials/footer') %>
     <script src='/js/password_reset.js'></script>
