--- a/server/views/pages/registration/password_reset.ejs
+++ b/server/views/pages/registration/password_reset.ejs
@@ -8,6 +8,7 @@
 
     <%- include ('../../partials/alerts') %>
 
+    <center>
 
     <div class="container">
       <div id='first-step' class="row">
@@ -39,6 +40,7 @@
       </div>
     </div> <!-- /container -->
 
+    </center>
 
     <%- include ('../../partials/footer') %>
     <script src='/js/password_reset.js'></script>
